# hillstoneUnited

./: Makefile  Makefile.in
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
hillstoneUnited/: BrainManager.cpp  BrainManager.h  Makefile  Makefile.am  Makefile.in  robot.cpp
hillstoneUnited/.deps/: drawing.Po  main.Po  rcss3dsocket.Po  robot.Po  world.Po
hillstoneUnited/MakeWalk/.deps/: angletrajectory.Po  coordinateconverter.Po  init.Po  inversekinematics.Po  invertedpendulum.Po  jointupdate.Po  legtrajectory.Po  legvelocity.Po  makewalk-set.Po  makewalk.Po  outputcommand.Po  quickinit.Po  setanklepos.Po  setheeltoe.Po  setyawangle.Po  timeupdate.Po  update.Po  walkcontrol.Po
hillstoneUnited/brain/: attack.cpp  attack.hpp  kickto.hpp  kicktofront.cpp  testbrain.hpp
hillstoneUnited/brain/.deps/: brainbase.Po  runtoball.Po
hillstoneUnited/brains/: BrainBase.cpp  BrainBase.h  FallDownResponce.cpp  Makefile.am  PassBrain.cpp  PassBrain.h  RunToBrain.cpp  RunToBrain.h  ShootBrain.cpp  ShootBrain.h  TestBrain.cpp  TestBrain.h  naganoBrain.cpp  naganoBrain.h
hillstoneUnited/movement/.deps/: ffmovement.Po  gabase.Po  gamovement.Po  kickmovement.Po  movementbase.Po  odenswalk.Po  pose.Po  posemovement.Po  sequence.Po  sequencemovement.Po  standup.Po  standupmovement.Po  ticktackbase.Po  ticktackmovement.Po
hillstoneUnited/responces/: FallDownResponce.cpp  Makefile.am  ResponceBase.cpp  ResponceBase.h
